--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
 	<h1>Moonscape Demo</h1>
 	<canvas data-processing-sources="pde/moonscape.pde" width="320" height="320"></canvas>
-	<p>&copy; 2020 Gary Smith<br />https://www.genartive.com</p> 
+	<p>&copy; 2020 Gary Smith<br /><a href="https://www.genartive.com">https://www.genartive.com</a></p> 
 </body>
 </html>
